# zodiac-liquidity

./: .dockerignore  .gitignore  AUDIT.md  Anchor.toml  Arcium.toml  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  SETUP.md  SETUP_CHECKLIST.md  check-cluster.ts  devnet-test-results.md  docker-run.sh  init-spl-tree.ts  localnet-test-reference.md  package-lock.json  package.json  testing_from_tg.txt  update-spl-limit.ts
.cursor/: AGENTS.md
.cursor/rules/: zodiac-liquidity-agent.mdc
artifacts/: arcium_clock.json  arcium_fee_pool.json  arx_ata_4HV6_Ca7F.json  arx_ata_5P9M_uP4R.json  arx_ata_HFb3_cror.json  arx_ata_recovery_peer_0.json  arx_ata_recovery_peer_1.json  arx_ata_recovery_peer_2.json  arx_ata_recovery_peer_3.json  arx_ata_recovery_peer_4.json  arx_mint.json  arx_node_4HV6_Ca7F.json  arx_node_HFb3_cror.json  arx_node_recovery_peer_0.json  arx_node_recovery_peer_1.json  arx_node_recovery_peer_2.json  arx_node_recovery_peer_3.json  arx_node_recovery_peer_4.json  circuits_hash.txt  clear_position_raw_circuit_0.json  cluster_acc_0.json  compute_withdrawal_raw_circuit_0.json  deposit_raw_circuit_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  get_user_position_raw_circuit_0.json  init_user_position_raw_circuit_0.json  init_vault_raw_circuit_0.json  mempool_acc.json  mxe_acc.json  mxe_key_recovery_init_comp.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  operator_acc_4HV6_Ca7F.json  operator_acc_HFb3_cror.json  operator_acc_recovery_peer_0.json  operator_acc_recovery_peer_1.json  operator_acc_recovery_peer_2.json  operator_acc_recovery_peer_3.json  operator_acc_recovery_peer_4.json  (+18 more)
artifacts/localnet/: identity_0.pem  identity_1.pem  identity_2.pem  identity_3.pem  (+33 more)
encrypted-ixs/: Cargo.toml
idls/: damm_v2.json
logs/: devnet-2026-01-30.txt  localnet-2026-01-30.txt
programs/zodiac_liquidity/: Cargo.toml
programs/zodiac_liquidity/src/: lib.rs
programs/zodiac_mixer/: Cargo.toml
programs/zodiac_mixer/src/: errors.rs  groth16.rs  lib.rs  merkle_tree.rs  utils.rs
scripts/: analyze_tokens.py  check_positions.py  close_all_accounts.ts  close_all_tokens.sh  close_positions.ts  close_remaining.ts  create-pool-devnet.ts  setup-devnet-demo.ts
tests/: check_comp_defs.ts  zodiac-full-privacy-integration.ts  zodiac-integration.ts  zodiac-liquidity-fail.ts  zodiac-liquidity.ts  zodiac-mixer.ts  zodiac-mpc-meteora-integration.ts  zodiac-swap.ts
(+31 files in other folders)
