[package]
name = "zodiac_liquidity"
version = "0.1.0"
description = "Privacy-focused DeFi liquidity provision for Meteora pools using Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zodiac_liquidity"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
arcium-client = { default-features = false, version = "=0.6.6" }
arcium-macros = "=0.6.6"
arcium-anchor = "=0.6.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
